src/objects/Z_Usage__c.object
<CustomObject>
    <fields>
        <fullName>ACCOUNTING_ENDDATE__c</fullName>
        <formula>Acct_Calendar__r.EndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ENDDATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCOUNTING_STARTDATE__c</fullName>
        <formula>Acct_Calendar__r.EndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STARTDATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AccountSubscriptionChargeDevice__c</fullName>
        <formula>Account_Name__c + &apos;|&apos; + SUBSCRIPTION_ID__c + &apos;|&apos; + CHARGE_ID__c + &apos;|&apos; + Device__r.Name</formula>
        <label>AccountSubscriptionChargeDevice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <label>Account_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Application__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Period__c</fullName>
        <label>Account Period</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acct Calendar</label>
        <referenceTo>Acct_Calendar__c</referenceTo>
        <relationshipLabel>Z-Usage</relationshipLabel>
        <relationshipName>Z_Usage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>VALUE(Rate__c)*QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Group_Date_Range__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Group Date Range</label>
        <referenceTo>Application_Group_Date_Range__c</referenceTo>
        <relationshipLabel>Z-Usage</relationshipLabel>
        <relationshipName>Z_Usage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_ID__c</fullName>
        <formula>Application__r.Application_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ApplicationID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Z-Usage</relationshipLabel>
        <relationshipName>Z_Usage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CHARGE_ID__c</fullName>
        <label>CHARGE_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractCurrency__c</fullName>
        <label>ContractCurrency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Z-Usage</relationshipLabel>
        <relationshipName>Z_Usage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>Application__r.Name + &apos;  -  &apos; +   Revenue_Unit__r.APC_Description__c</formula>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Z-Usage</relationshipLabel>
        <relationshipName>Z_Usage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ENDDATE__c</fullName>
        <label>ENDDATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GL_APC__c</fullName>
        <label>GL_APC</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_CC__c</fullName>
        <label>GL_CC</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MESSAGE__c</fullName>
        <label>MESSAGE</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_Line_Number__c</fullName>
        <formula>Revenue_Unit__r.Order_Line_Number__c</formula>
        <label>Order Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PREPAID__c</fullName>
        <label>PREPAID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing_Date__c</fullName>
        <formula>Revenue_Unit__r.ProcessedDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Processing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Revenue_Unit__r.APC_Description__c</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>QTY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuarterName__c</fullName>
        <label>QuarterName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Invoice_Export_ID__c</fullName>
        <formula>Revenue_Unit__r.Revenue_Invoice__r.Export_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Invoice Export ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Invoice_Status__c</fullName>
        <formula>TEXT(Revenue_Unit__r.Revenue_Invoice__r.Status__c)</formula>
        <label>Revenue Invoice Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Invoice__c</fullName>
        <formula>Revenue_Unit__r.Revenue_Invoice__r.Invoice_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Invoice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Unit_Product_Number__c</fullName>
        <formula>Revenue_Unit__r.Product_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Unit Product Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Unit_Status__c</fullName>
        <formula>TEXT(Revenue_Unit__r.Status__c)</formula>
        <label>Revenue Unit Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Unit</label>
        <referenceTo>Revenue_Unit__c</referenceTo>
        <relationshipLabel>Z-Usage</relationshipLabel>
        <relationshipName>Z_Usage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Units__c</fullName>
        <label>Revenue Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Royalty_Amount__c</fullName>
        <formula>value(Rate__c)*Revenue_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Royalty Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STARTDATE__c</fullName>
        <label>STARTDATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>STATUS__c</fullName>
        <label>STATUS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBSCRIPTION_ID__c</fullName>
        <label>SUBSCRIPTION_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Model</label>
        <referenceTo>Sales_Model__c</referenceTo>
        <relationshipLabel>Z-Usage</relationshipLabel>
        <relationshipName>Z_Usage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Split__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <formula>CASESAFEID(Application__r.Account__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor</label>
        <type>Text</type>
    </fields>
    <label>Z-Usage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Revenue_Unit__c</columns>
        <columns>Contract__c</columns>
        <columns>Application_ID__c</columns>
        <columns>Sales_Model__c</columns>
        <columns>QuarterName__c</columns>
        <columns>Device__c</columns>
        <columns>Account_Period__c</columns>
        <columns>MESSAGE__c</columns>
        <columns>PREPAID__c</columns>
        <columns>QTY__c</columns>
        <columns>Rate__c</columns>
        <columns>Royalty_Amount__c</columns>
        <columns>Revenue_Units__c</columns>
        <columns>Amount__c</columns>
        <columns>Application__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Z-Usage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z-Usage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>